internal/xds/translator/testdata/out/xds-ir/health-check.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: third-route
      route:
        cluster: third-route-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: fourth-route
      route:
        cluster: fourth-route-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: fifth-route
      route:
        cluster: fifth-route-dest
        upgradeConfigs:
        - upgradeType: websocket
  - domains:
    - gateway.envoyproxy.io
    name: first-listener/gateway_envoyproxy_io
    routes:
    - match:
        pathSeparatedPrefix: /v6
      metadata:
        filterMetadata:
          envoy-gateway:
            policies:
            - kind: BackendTrafficPolicy
              name: policy-for-route-6
              namespace: default
            resources:
            - kind: HTTPRoute
              name: httproute-6
              namespace: default
      name: httproute/default/httproute-6/rule/0/match/0/gateway_envoyproxy_io
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - hostRewriteLiteral: example2.com
            name: httproute/default/httproute-6/rule/0/backend/0
            weight: 1
          - name: httproute/default/httproute-6/rule/0/backend/1
            weight: 1
